--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "cors": "^2.8.5",
     "csv-parse": "^5.3.0",
     "express": "^4.18.1",
+    
+  },
+  "devDependencies": {
     "nodemon": "^2.0.20"
   }
 }
